--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde_json = "1"
 dotenvy = "0.15"
 log = "0.4"
 pretty_env_logger = "0.5"
+ink = "4.0"
+parity-scale-codec = "3.0"
+sp-core = "9.0"
