--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,20 @@
 PORT=8080
 RUST_LOG=info
 
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost/trustbridge
+DATABASE_MAX_CONNECTIONS=10
+
+# Firebase Configuration
 FIREBASE_PROJECT_ID=your_project_id
 FIREBASE_PRIVATE_KEY=your_private_key
 FIREBASE_CLIENT_EMAIL=your_client_email
+
+# API Configuration
 API_SECRET_KEY=your_api_secret_key
+
+# Stellar Configuration
+STELLAR_NETWORK=testnet
+STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
+STELLAR_ESCROW_PUBLIC_KEY=your_public_key
+STELLAR_ESCROW_SECRET_KEY=your_secret_key
